editors/tree-sitter-rune/test/corpus/config.txt
==================
basic config
==================

# This is a comment
gather "defaults.rune" as defaults
@description "Simple app using RUNE config"

name "RuneApp"
path = $env.PATH

app:
  name name
  version "1.0.0"
  debug true

  server:
    host = defaults.server.host
    port 8080
    timeout "30s"
  end

  plugins [
    "auth",
    "logger"
  ]
end

font "Inter" with size 14 weight 600
"$var.mod+left" "focus-left" with repeat false

---

(source_file
  (comment)
  (gather_statement path: (string) alias: (identifier))
  (metadata name: (identifier) value: (string))
  (assignment key: (identifier) value: (string))
  (assignment key: (identifier) value: (reference))
  (object_block
    name: (identifier)
    (assignment key: (identifier) value: (reference))
    (assignment key: (identifier) value: (string))
    (assignment key: (identifier) value: (boolean))
    (object_block
      name: (identifier)
      (assignment key: (identifier) value: (reference))
      (assignment key: (identifier) value: (number))
      (assignment key: (identifier) value: (string)))
    (assignment
      key: (identifier)
      value: (array
        (string)
        (string))))
  (assignment
    key: (identifier)
    value: (string)
    attributes: (inline_attributes
      (inline_attribute name: (identifier) value: (number))
      (inline_attribute name: (identifier) value: (number))))
  (assignment
    key: (string)
    value: (string)
    attributes: (inline_attributes
      (inline_attribute name: (identifier) value: (boolean)))))
